// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellIconText should render an empty cell 1`] = `
<div
  className="tc-icon-text theme-tc-icon-text"
>
  <TooltipTrigger
    tooltipPlacement="top"
  >
    <span
      className="theme-label"
    />
  </TooltipTrigger>
</div>
`;

exports[`CellIconText should render an icon cell with an icon 1`] = `
<div
  className="tc-icon-text theme-tc-icon-text"
>
  <Icon
    name="talend-list"
  />
  <TooltipTrigger
    label="list"
    tooltipPlacement="top"
  >
    <span
      className="theme-label"
    >
      list
    </span>
  </TooltipTrigger>
</div>
`;

exports[`CellIconText should render an icon cell with an icon using the getIcon method 1`] = `
<div
  className="tc-icon-text theme-tc-icon-text"
>
  <Icon
    name="hihihi-list"
  />
  <TooltipTrigger
    label="List"
    tooltipPlacement="top"
  >
    <span
      className="theme-label"
    >
      List
    </span>
  </TooltipTrigger>
</div>
`;
